# rlib

./: .gitignore  Makefile.am  RPM-FLAGS.txt  autogen.sh  configure.ac  rlib.dtd  rlib.pc.in  rlib.spec.in
bindings/: Makefile.am
bindings/csharp/: csharp.c
bindings/interfaces/: SWIGTYPE_p_f_p_rlib_p_void__int.cs  SWIGTYPE_p_f_p_rlib_p_void__int.java  SWIGTYPE_p_float.cs  SWIGTYPE_p_float.java  SWIGTYPE_p_gboolean.cs  SWIGTYPE_p_gboolean.java  SWIGTYPE_p_gchar.cs  SWIGTYPE_p_gchar.java  SWIGTYPE_p_gdouble.cs  SWIGTYPE_p_gdouble.java  SWIGTYPE_p_gint.cs  SWIGTYPE_p_gint.java  SWIGTYPE_p_gsize.cs  SWIGTYPE_p_gsize.java  SWIGTYPE_p_rlib.cs  SWIGTYPE_p_rlib.java  SWIGTYPE_p_rlib_part.cs  SWIGTYPE_p_rlib_part.java  SWIGTYPE_p_rlib_report.cs  SWIGTYPE_p_rlib_report.java  SWIGTYPE_p_void.cs  SWIGTYPE_p_void.java  rlib.cs  rlib.java  rlib.pm  rlib.py  rlibJNI.java  rlibPINVOKE.cs
bindings/java/: java.c
bindings/perl/: Makefile.am  perl.c
bindings/php/: Makefile.am  array_data_source.c  config.m4  environment.c  php.c  rlib_php.h
bindings/python/: Makefile.am  python.c  rlibmodule.c
doc/: Makefile.am  basictraining.sgm  book.sgm  capi.sgm  formating.sgm  graphing.sgm  phpapi.sgm  symboltable.sgm
inputs/: Makefile.am
inputs/mysql/: Makefile.am  mysql.c
inputs/odbc/: Makefile.am  odbc.c
inputs/postgres/: Makefile.am  postgres.c
libsrc/: Makefile.am  api.c  array_data_source.c  axis.c  barcode.c  breaks.c  charencoder.c  charencoder.h  csv.c  csv_data_source.c  datasource.c  datetime.c  datetime.h  environment.c  formatstring.c  formatstring.h  free.c  fxp.c  gantt.c  gd.c  graphing.c  html.c  layout.c  libr.def  mpfr_strfmon.c  navigation.c  parsexml.c  pcode.c  pcode.h  pcode_op_functions.c  pdf.c  reportgen.c  resolution.c  rlib-internal.h  rlib.h  rlib.i  rlib_gd.h  rlib_input.h  rlib_langinfo.c  rlib_langinfo.h  (+8 more)
rpdf/: Makefile.am  librpdf.def  rpdf-embed-font.txt  rpdf-internal.h  rpdf.c  rpdf.h  test.c
src/: Makefile.am  rlib-parse.c  rlibc.c
src/examples/: Makefile.am
src/examples/c/: Makefile.am  empty-string.c  emptystr.xml  example.c  example_pg.c  follower.c  follower2.c  follower_1_to_1_then_n_to_1.c  follower_circular.c  follower_n_to_1.c  follower_n_to_1_full_cartesian.c  graph.xml  relprt.c  relpth1-gen.c
src/examples/common/: create_database_user_postgresql  create_products_postgresql
src/examples/csharp/: Makefile.am
src/examples/java/: Makefile.am
src/examples/perl/: Makefile.am
src/examples/php/: Makefile.am  breaks.xml  breaks2.xml  follower.php  follower.xml  graph.php  hyperinflation.xml
src/examples/python/: Makefile.am
tests/: Makefile.am  test1.c  test2.c  test3.c
